@@ -9,9 +9,6 @@ this repository contains the full copyright notices and license terms. -->
         <record model="ir.message" id="msg_password_forbidden">
             <field name="text">The password is forbidden.</field>
         </record>
-        <record model="ir.message" id="msg_password_entropy">
-            <field name="text">The same characters appear in the password too many times.</field>
-        </record>
         <record model="ir.message" id="msg_password_name">
             <field name="text">The password cannot be the same as user's name.</field>
         </record>
